# BeautyOps

./: .env.stripe.template  .gitignore  .mcp.json  AI_TEMPLATE_GENERATION_WORKFLOW.md  BILLING_PAGE_DEEP_DIVE_DIAGNOSIS.md  BeautyOps.txt  Beauty_Ops_GHL_Integration_Spec.md  CALENDAR_INTEGRATION_COMPLETE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIX.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  DOMAIN_MIGRATION_GUIDE.md  FIND_JWT_SECRET.md  FREE_TRIAL_IMPLEMENTATION.md  GHL_Implementation_Guide.md  LANDING_PAGE_FIX.md  MIGRATION_STATUS.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_STRIPE.md  RUN_MIGRATION.md  SALES_AND_MARKETING.md  SENDGRID_SETUP.md  START_HERE.md  STRIPE_MCP_COMMANDS.md  STRIPE_PRODUCTION_SETUP.md  STRIPE_PRODUCTS_NEEDED.md  STRIPE_SETUP_GUIDE.md  SUPABASE_SETUP.md  TROUBLESHOOTING_BILLING_PAGE.md  TYPESCRIPT_FIX.md  UI_UX_IMPROVEMENTS.md  UPDATE_PRICE_IDS.md  WEBHOOK_SETUP.md  outreach_pilot_2-slide.md
backend/: .env  README.md  db.py  main.py  pyproject.toml  railway.json  requirements.txt
backend/chains/: extra_chains.py  pos_chain.py  visit_chain.py
backend/middleware/: auth.py
backend/migrations/: 20260107_ghl_integration.sql  20260120_stripe_billing.sql  20260126_lead_capture.sql  20260202_calendar_integrations.sql
backend/routers/: billing.py  calendar.py  extra_features.py  leads.py  pos.py  usage.py  vision.py  visits.py
backend/services/: briefing_service.py  ghl_service.py  stripe_service.py  template_generator.py
frontend/: env.example  middleware.ts  package-lock.json  package.json  proxy.ts
frontend/app/: page.tsx  (+3 more)
(+40 files in other folders)
